fix: timing labels wrapping (#866)

--- a/packages/devtools/src/webcomponents/style.css
+++ b/packages/devtools/src/webcomponents/style.css
@@ -152,12 +152,14 @@
 
 #nuxt-devtools-anchor .nuxt-devtools-label .nuxt-devtools-label-main {
   opacity: 0.8;
+  white-space: nowrap;
 }
 
 #nuxt-devtools-anchor .nuxt-devtools-label .nuxt-devtools-label-secondary {
   font-size: 0.8em;
   line-height: 0.6em;
   opacity: 0.5;
+  white-space: nowrap;
 }
 
 #nuxt-devtools-anchor .nuxt-devtools-nuxt-button {
